Fix delegate list filters not to wrap on width ~1050px

--- a/src/components/delegateList/delegateList.css
+++ b/src/components/delegateList/delegateList.css
@@ -168,7 +168,7 @@
     vertical-align: middle;
 
     &:not(:last-of-type) {
-      margin-right: 50px;
+      margin-right: 40px;
     }
   }
 
